# xtranslator

./: Cargo.toml  LICENSE
all-in-one/: Cargo.toml
all-in-one/src/: lib.rs
lib/: Cargo.toml
lib/src/: ffi.rs  ffi_proxy.rs  lib.rs  utils.rs
macros/: Cargo.toml
macros/src/: lib.rs
plugin-baidu-fanyi/: Cargo.toml
plugin-baidu-fanyi/src/: lib.rs  translator.rs
plugin-hunyuan/: Cargo.toml
plugin-hunyuan/src/: lib.rs  translator.rs
plugin-openai/: Cargo.toml
plugin-openai/src/: lib.rs  translator.rs
plugin-qwen/: Cargo.toml
plugin-qwen/src/: lib.rs  translator.rs
plugin-youdao-llm/: Cargo.toml
plugin-youdao-llm/src/: lib.rs  translator.rs
