[package]
name = "all-in-one"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
lib = { path = "../lib" }
plugin-openai = { path = "../plugin-openai", optional = true }
plugin-qwen = { path = "../plugin-qwen", optional = true }
plugin-baidu-fanyi = { path = "../plugin-baidu-fanyi", optional = true }
plugin-hunyuan = { path = "../plugin-hunyuan", optional = true }
plugin-youdao-llm = { path = "../plugin-youdao-llm", optional = true }

[features]
full = [
    "plugin-openai",
    "plugin-qwen",
    "plugin-baidu-fanyi",
    "plugin-hunyuan",
    "plugin-youdao-llm"
]
