[package]
name = "plugin-baidu-fanyi"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
lib = { path = "../lib" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
async-trait = "0.1.88"
language-tags = { version = "0.3.2", features = ["serde"] }
sha2 = "0.10.8"
reqwest = "0.12.15"
md-5 = "0.10.6"
hex = "0.4.3"
uuid = { version = "1.16.0", features = ["v4"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dylib"]
dylib = []
