[package]
name = "plugin-qwen"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
lib = { path = "../lib" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
futures-util = "0.3.31"
async-openai = { version = "0.28.0", features = ["byot"] }
async-trait = "0.1.88"
language-tags = { version = "0.3.2", features = ["serde"] }

[lib]
crate-type = ["cdylib", "rlib"]
