[package]
name = "plugin-youdao-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
lib = { path = "../lib" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
futures-util = "0.3.31"
async-trait = "0.1.88"
language-tags = { version = "0.3.2", features = ["serde"] }
sha2 = "0.10.8"
reqwest = "0.12.15"
hex = "0.4.3"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"
reqwest-eventsource = "0.6.0"

[lib]
crate-type = ["cdylib", "rlib"]
